# learn_cmake_by_actions

./: .gitignore  .gitmodules  README.md
0 - Notes/: do's_and_don's.md
0_Notes/: notes.md
1 - Examples/3rd_party_lib/: CMakeLists.txt  run.sh
1 - Examples/basics/: CMakeLists.txt  demo.cpp  dep.h
1 - Examples/basics/src/: demo.cpp
1 - Examples/submodule/: CMakeLists.txt  hello_cmake
1 - Examples/submodule/.cache/clangd/index/: hello.cpp.2BA37A638A03F994.idx  hello.hpp.0E29AC10923ED80B.idx  main.cpp.5007B6CC58489A41.idx
1 - Examples/submodule/hellolib/: CMakeLists.txt  hello.cpp  hello.hpp
1_Examples/3rd_party_lib/: main.cpp  run.sh
1_Examples/3rd_party_lib_module/: CMakeLists.txt  run.sh
1_Examples/3rd_party_lib_system/: CMakeLists.txt  main.cpp  run.sh
1_Examples/basics/: fun.cpp
1_Examples/submodule/: main.cpp
